--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     scroll-behavior: smooth;
+    color: white;
 }
 
 html,body{
@@ -12,6 +13,7 @@ html,body{
 
 
 body{
+    background-color: rgb(22,23,29);
     min-height: 100vh;
     padding: 1rem;
     line-height: 1.5em;
@@ -24,10 +26,9 @@ li{
 
 a{
     text-decoration: none;
-    color: black;
 }
 
 a:hover{
     text-decoration: underline;
-    color: blue;
+    color: lightgreen;
 }
